docs/api/qiskit/0.19/qiskit.providers.ibmq.managed.ManagedJob.mdx
---
title: ManagedJob (v0.19)
description: API reference for qiskit.providers.ibmq.managed.ManagedJob in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.ibmq.managed.ManagedJob
---

# ManagedJob

<Class id="qiskit.providers.ibmq.managed.ManagedJob" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-ibmq-provider/tree/stable/0.7/qiskit/providers/ibmq/managed/managedjob.py" signature="ManagedJob(start_index, experiments_count, job=None)" modifiers="class">
  Job managed by the Job Manager.

  ManagedJob constructor.

  **Parameters**

  *   **start\_index** (`int`) – Starting index of the experiment set.
  *   **experiments\_count** (`int`) – Number of experiments.
  *   **job** (`Optional`\[[`IBMQJob`](qiskit.providers.ibmq.job.IBMQJob "qiskit.providers.ibmq.job.ibmqjob.IBMQJob")]) – Job to be managed, or `None` if not already known.

  ## Methods

  <span id="managedjob-cancel" />

  ### cancel

  <Function id="qiskit.providers.ibmq.managed.ManagedJob.cancel" signature="ManagedJob.cancel()">
    Attempt to cancel the job.

    **Return type**

    `None`
  </Function>

  <span id="managedjob-error-message" />

  ### error\_message

  <Function id="qiskit.providers.ibmq.managed.ManagedJob.error_message" signature="ManagedJob.error_message()">
    Provide details about the reason of failure.

    **Return type**

    `Optional`\[`str`]

    **Returns**

    An error report if the job failed or `None` otherwise.
  </Function>

  <span id="managedjob-qobj" />

  ### qobj

  <Function id="qiskit.providers.ibmq.managed.ManagedJob.qobj" signature="ManagedJob.qobj()">
    Return the Qobj for this job.

    **Return type**

    `Union`\[[`QasmQobj`](qiskit.qobj.QasmQobj "qiskit.qobj.qasm_qobj.QasmQobj"), [`PulseQobj`](qiskit.qobj.PulseQobj "qiskit.qobj.pulse_qobj.PulseQobj"), `None`]

    **Returns**

    The Qobj for this job or `None` if the Qobj could not be retrieved.
  </Function>

  <span id="managedjob-result" />

  ### result

  <Function id="qiskit.providers.ibmq.managed.ManagedJob.result" signature="ManagedJob.result(timeout=None, partial=False)">
    Return the result of the job.

    **Parameters**

    *   **timeout** (`Optional`\[`float`]) – Number of seconds to wait for job.
    *   **partial** (`bool`) – If `True`, attempt to retrieve partial job results.

    **Return type**

    `Optional`\[[`Result`](qiskit.result.Result "qiskit.result.result.Result")]

    **Returns**

    Job result or `None` if result could not be retrieved.

    **Raises**

    [**IBMQJobTimeoutError**](qiskit.providers.ibmq.job.IBMQJobTimeoutError "qiskit.providers.ibmq.job.IBMQJobTimeoutError") – If the job does not return results before a specified timeout.
  </Function>

  <span id="managedjob-status" />

  ### status

  <Function id="qiskit.providers.ibmq.managed.ManagedJob.status" signature="ManagedJob.status()">
    Query the server for job status.

    **Return type**

    `Optional`\[[`JobStatus`](qiskit.providers.JobStatus "qiskit.providers.jobstatus.JobStatus")]

    **Returns**

    Current job status, or `None` if an error occurred.
  </Function>

  <span id="managedjob-submit" />

  ### submit

  <Function id="qiskit.providers.ibmq.managed.ManagedJob.submit" signature="ManagedJob.submit(qobj, job_name, backend, executor, submit_lock, job_share_level, job_tags=None)">
    Submit the job.

    **Parameters**

    *   **qobj** (`Union`\[[`QasmQobj`](qiskit.qobj.QasmQobj "qiskit.qobj.qasm_qobj.QasmQobj"), [`PulseQobj`](qiskit.qobj.PulseQobj "qiskit.qobj.pulse_qobj.PulseQobj")]) – Qobj to run.
    *   **job\_name** (`str`) – Name of the job.
    *   **backend** ([`IBMQBackend`](qiskit.providers.ibmq.IBMQBackend "qiskit.providers.ibmq.ibmqbackend.IBMQBackend")) – Backend to execute the experiments on.
    *   **executor** (`ThreadPoolExecutor`) – The thread pool used to submit the job.
    *   **submit\_lock** (`allocate_lock`) – Lock used to synchronize job submission.
    *   **job\_share\_level** (`ApiJobShareLevel`) – Job share level.
    *   **job\_tags** (`Optional`\[`List`\[`str`]]) – Tags to be assigned to the job.

    **Return type**

    `None`
  </Function>
</Class>

